--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-iconify==0.1.2
 dash-table==5.0.0
+dill==0.3.9
 diskcache==5.6.3
 Flask==3.0.3
 fonttools==4.55.0
@@ -20,12 +21,14 @@ Jinja2==3.1.4
 kiwisolver==1.4.7
 MarkupSafe==3.0.2
 matplotlib==3.9.2
+multiprocess==0.70.17
 nest-asyncio==1.6.0
 numpy==2.1.3
 packaging==24.2
 pandas==2.2.3
 pillow==11.0.0
 plotly==5.24.1
+psutil==6.1.0
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
@@ -34,8 +37,10 @@ retrying==1.3.4
 setuptools==75.6.0
 six==1.16.0
 tenacity==9.0.0
+tqdm==4.67.1
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
 Werkzeug==3.0.6
+xmltodict==0.14.2
 zipp==3.21.0
